# semantic-gateway

./: LICENSE.md  README.md  REPORT.md
research/: STATE.md  deliverable.md  plan.md  proposal.md  results.md
research/experiments/2026-07-22-smoke-g3/: README.md  results.csv  results.json  train_log_seed0.jsonl
research/experiments/2026-07-22-smoke-g3/keyframe/: accuracy.json  summary.json
research/experiments/2026-07-22-smoke-g3/semantic/: accuracy.json  summary.json
research/experiments/2026-07-23-rq1-policy-sweep/: README.md  agg.csv  agg.json  manifests_strat3.jsonl  results.csv  results.json
research/experiments/2026-07-23-rq2-trigger-latency/: README.md  rq2_agg.json  traces.tgz
research/experiments/2026-07-23-rq3-frame-vs-feature/: README.md  feat_avgpool_int8.json  feat_layer1_int8.json  feat_layer2_int8.json  feat_layer3_int8.json  feat_layer4_int8.json  feat_stem_int8.json  split_latency_cpu.json
research/figures/: make_figures.py
software/: IMPLEMENTATION_NOTES.md  README.md  pyproject.toml
software/experiments/: run.sh  smoke.sh
software/model/: aggregate.py  analyze_trigger.py  eval_all.py  evaluate_trace.py  extract_features.py  finetune.py  measure_split_latency.py  prepare_manifests.py  rq2_aggregate.py  subset_manifests.py  ucf_data.py
software/semantic_gateway/: __init__.py  decodability.py  manifest.py  metrics.py  policies.py  proxy.py  receiver.py  rtp.py  sender.py  summarize.py
software/testbed/: netns.sh
software/tests/: test_decodability.py  test_policies.py  test_rtp.py
(+4 files in other folders)
